--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <DOCTYPE html>
 <html>
 <head>
+	<title>0819 game</title>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.0.6/phaser.min.js"></script>
 </head>
+
 <body>
-<h1> cmsla</h1>
+<h1>cmsla</h1>
 </body>
+
 </html>
