--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 </head>
 
 <body>
-<h1>cmsla</h1>
+	<script type="text/javascript">
+		window.anload = function() {
+				var game =new phaser.game(000, 000, phaser.AUTO, '',{});
+			}; 
+		}
+	</script>
 </body>
 
 </html>
