--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>0819 game</title>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.0.6/phaser.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/phaser/2.0.6/phaser.min.js"></script>
 </head>
 
 <body>
 	<script type="text/javascript">
-		window.anload = function() {
-				var game =new phaser.game(000, 000, phaser.AUTO, '',{});
-			}; 
-		}
+		window.onload = function() {
+			var game = new Phaser.Game(800, 600, Phaser.AUTO, '',{preload: preload, create: create, render: render});
+			
+			var character;
+
+			function preload() {
+
+			}
+
+			function create() {			
+				character = new Phaser.Rectangle(380, 280, 40, 40) 
+			}
+
+			function render() {			
+				game.debug.geom(character,'#0fffff');
+			}
+		}; 
+
 	</script>
 </body>
-
 </html>
