추가: 사각형 & 마리오

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 			var game = new Phaser.Game(800, 600, Phaser.AUTO, '',{preload: preload, create: create, render: render});
 			
 			var character;
+			var mario;
 
 			function preload() {
-
+				game.load.image('mario', 'assets/mario.png');
 			}
 
 			function create() {			
-				character = new Phaser.Rectangle(380, 280, 40, 40) 
+				character = new Phaser.Rectangle(380, 280, 40, 40); 
+				mario = game.add.sprite(100, 100, 'mario');
 			}
 
 			function render() {			
