--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<script type="text/javascript">
 		window.onload = function() {
-			var game = new Phaser.Game(800, 600, Phaser.AUTO, '',{preload: preload, create: create, render: render});
+			var game = new Phaser.Game(800, 600, Phaser.AUTO, '',{preload: preload, create: create, update: update,  render: render});
 			
 			var character;
 			var mario;
@@ -20,6 +20,14 @@
 			function create() {			
 				character = new Phaser.Rectangle(380, 280, 40, 40); 
 				mario = game.add.sprite(100, 100, 'mario');
+
+				cursors = game.input.keyboard.createCursorKey();
+			}
+
+			function update() {			
+				if (cursors.up.isDown === true) {
+					mario.fotation += 0.05;
+						
 			}
 
 			function render() {			
