--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				character = new Phaser.Rectangle(380, 280, 40, 40); 
 				mario = game.add.sprite(100, 100, 'mario');
 
-				cursors = game.input.keyboard.createCursorKey();
+				cursors = game.input.keyboard.createCursorKeys();
 			}
 
 			function update() {			
