--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			function create() {			
 				character = new Phaser.Rectangle(380, 280, 40, 40); 
 				mario = game.add.sprite(100, 100, 'mario');
+				mario.anchor.setTo(0.5);
 
 				cursors = game.input.keyboard.createCursorKeys();
 			}
