--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			function create() {			
 				character = new Phaser.Rectangle(380, 280, 40, 40); 
 				mario = game.add.sprite(100, 100, 'mario');
-				mario.anchor.setTo(0.5);
+				mario.anchor.setTo(0.5, 0.5);
 
 				cursors = game.input.keyboard.createCursorKeys();
 			}
@@ -28,6 +28,10 @@
 			function update() {			
 				if (cursors.up.isDown === true) {
 					mario.fotation += 0.05;
+				}
+
+				if (cursors.down.isDown === true) {
+					mario.fotation += -0.05;
 				}
 
 			}
