--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 			function update() {			
 				if (cursors.up.isDown === true) {
-					mario.fotation += 0.05;
+					mario.rotation += 0.05;
 				}
 
 				if (cursors.down.isDown === true) {
-					mario.fotation += -0.05;
+					mario.rotation += -0.05;
 				}
 
 			}
