--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 					mario.rotation += -0.05;
 				}
 
+				if (cursors.left.isDown === true) {
+					mario.X += -0.05;
+				}
+
 			}
 
 			function render() {			
