--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 				//character = new Phaser.Rectangle(380, 280, 40, 40); 
 				mario = game.add.sprite(100, 100, 'mario');
 				mario.anchor.setTo(0.5, 0.5);
-				mario.location
+				
+				Bt = game.add.sprite(50, 50, 'Bt');
 
 				cursors = game.input.keyboard.createCursorKeys();
 			}
