--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				mario = game.add.sprite(100, 100, 'mario');
 				mario.anchor.setTo(0.5, 0.5);
 				
-				Bt = game.add.sprite(100, 100, 50, 50, 'Bt');
+				Bt = game.add.sprite(50, 50, 'Bt');
 
 				cursors = game.input.keyboard.createCursorKeys();
 			}
