--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
 			function create() {			
 				//character = new Phaser.Rectangle(380, 280, 40, 40); 
-				mario = game.add.sprite(100, 100, 'mario');
+				//mario = game.add.sprite(100, 100, 'mario');
+				mario = game.add.sprite(380, 280, 100, 100);
 				mario.anchor.setTo(0.5, 0.5);
 				
 				Bt = game.add.sprite(50, 50, 'Bt');
