--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
 
 			function preload() {
 				game.load.image('mario', 'assets/mario.png');
-				game.load.image('Bt', 'assets/upBt.png');
-				game.load.image('Bt', 'assets/downBt.png');
-				game.load.image('Bt', 'assets/leftBt.png');
-				game.load.image('Bt', 'assets/rightBt.png');
+				game.load.image('up', 'assets/upBt.png');
+				game.load.image('down', 'assets/downBt.png');
+				game.load.image('left', 'assets/leftBt.png');
+				game.load.image('right', 'assets/rightBt.png');
 			}
 
 			function create() {			
 				//character = new Phaser.Rectangle(380, 280, 40, 40); 
 				mario = game.add.sprite(100, 100, 'mario');
 				mario.anchor.setTo(0.5, 0.5);
-				
-				Bt = game.add.sprite(50, 50, 'Bt');
+				mario.
+				up = game.add.sprite(600, 300, 'up');
+				down = game.add.sprite(600, 500, 'down');
+				left = game.add.sprite(500, 400, 'left');
+				right = game.add.sprite(700, 400, 'right');
 
 				cursors = game.input.keyboard.createCursorKeys();
 			}
@@ -37,12 +40,12 @@
 					mario.rotation += 0.05;
 				}
 
-				if (cursors.down.isDown === true) {
+				else if (cursors.down.isDown === true) {
 					mario.rotation += -0.05;
 				}
 
-				if (cursors.left.isDown === true) {
-					mario.X += 100;
+				else if (cursors.left.isDown === true) {
+					mario.X += 5;
 				}
 
 			}
