--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 			var character;
 			var mario;
 			function preload(){
-				game.load.image('mario', 'image/mario.png');
-				game.load.image('up', 'image/up.png');
-				game.load.image('down', 'image/down.png');
-				game.load.image('left', 'image/left.png');
-				game.load.image('right', 'image/right.png');
+				game.load.image('mario', 'assets/mario.png');
+				game.load.image('up', 'assets/upBt.png');
+				game.load.image('down', 'assets/downBt.png');
+				game.load.image('left', 'assets/leftBt.png');
+				game.load.image('right', 'assets/rightBt.png');
 			}
 			function create(){
 				character = new Phaser.Rectangle(380, 280, 40, 40); 
